# research_paper_on_cybermanipulation_susceptibility

./: .env.example  .gitignore  CITATION.cff  LICENSE  README.md  requirements.txt  run_pipeline_demo.ipynb
data/exposure_networks/politisky24_bluesky_v1/: README.md  assignment_positions.csv  checksums.sha256  data_dictionary.json  manifest.json  neighborhood_metrics.csv  node_metrics.csv  nodes.csv  propagation_metrics.csv
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
evaluation/production/run_1/: README.md
profile_network_workbench/: .gitignore  README.md
profile_network_workbench/api/: pyproject.toml
profile_network_workbench/api/src/profile_network_workbench_api/: backend_adapter.py  main.py  schemas.py  settings.py
profile_network_workbench/api/src/profile_network_workbench_api/routes/: baseline_runs.py  pipeline_view.py  post_attack_network_exposure_runs.py  post_exposure_runs.py  profile_network.py
profile_network_workbench/api/src/profile_network_workbench_api/services/: baseline_runs.py  network_exposure_runs.py  pipeline_view.py  post_attack_network_exposure_runs.py  post_exposure_runs.py
profile_network_workbench/api/tests/: test_agent_token_budget.py
profile_network_workbench/docs/: NETWORK_EXPOSURE_LAYER.md
profile_network_workbench/web/: package.json
report/report/: main.tex
research_report/report/: main.tex  references.bib
scripts/production/: analyze_run_1.py  build_dashboard.py  run_1.sh  run_2.sh
scripts/tests/: run_1.sh  run_2.sh  run_3.sh  run_4.sh  run_5.sh
src/backend/: __init__.py  requirements.txt
(+6141 files in other folders)
