[project]
name = "profile-network-workbench-api"
version = "0.1.0"
description = "Profile network and baseline elicitation workbench for the cognitive sovereignty simulation."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "numpy>=1.26,<2.0",
    "pydantic>=2,<3",
    "psycopg[binary]>=3.2,<4",
    "python-dotenv>=1.0,<2",
    "uvicorn>=0.38,<1",
]

[dependency-groups]
dev = [
    "httpx>=0.28,<1",
    "pytest>=8,<9",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/profile_network_workbench_api"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]
